--- a/imageviewer/icons/CMakeLists.txt
+++ b/imageviewer/icons/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-ecm_install_icons(ICONS hi16-apps-kipi-ogl.png  hi32-apps-kipi-ogl.png DESTINATION ${ICON_INSTALL_DIR})
+ecm_install_icons(${ICON_INSTALL_DIR})
