--- a/googleservices/CMakeLists.txt
+++ b/googleservices/CMakeLists.txt
@@ -40,4 +40,4 @@ configure_file(kipiplugin_googleservices.desktop.cmake ${CMAKE_CURRENT_BINARY_DI
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_googleservices.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_googleservices                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_googleservicesui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_googleservicesui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
