--- a/PORT.KF5/FACTORIZE/dropbox/CMakeLists.txt
+++ b/PORT.KF5/FACTORIZE/dropbox/CMakeLists.txt
@@ -1,10 +1,12 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
 subdirs(icons)
+
+add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_dropbox\")
 
 include_directories(${QJSON_INCLUDE_DIR})
 
@@ -23,7 +25,6 @@ target_link_libraries(kipiplugin_dropbox
                       KF5::KDcraw
                       KF5::Kipi
                       KF5::KExiv2
-                      
                       KF5::KIOCore
                       ${QJSON_LIBRARIES}
                       KF5kipiplugins
