--- a/PORT.KF5/FACTORIZE/facebook/CMakeLists.txt
+++ b/PORT.KF5/FACTORIZE/facebook/CMakeLists.txt
@@ -1,10 +1,12 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
 subdirs(icons)
+
+add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_facebook\")
 
 include_directories(${QJSON_INCLUDE_DIR})
 
@@ -15,7 +17,6 @@ set(kipiplugin_facebook_PART_SRCS
     fbalbum.cpp
     fbtalker.cpp
     mpform.cpp
-    facebookjob.cpp
    )
 
 add_library(kipiplugin_facebook MODULE ${kipiplugin_facebook_PART_SRCS})
@@ -26,7 +27,6 @@ target_link_libraries(kipiplugin_facebook
                       KF5::KExiv2
                       KF5::KDcraw
                       KF5::KIOCore
-                      
                       ${QJSON_LIBRARIES}
                      )
 
