add comment about fure port to Qt5

--- a/dlnaexport/extra/CMakeLists.txt
+++ b/dlnaexport/extra/CMakeLists.txt
@@ -8,6 +8,7 @@
 #add_definitions(-DQT_NO_CAST_FROM_ASCII)
 #add_definitions(-DQT_NO_CAST_TO_ASCII)
 
+# TODO : remove this directive step by step to port to pure Qt5.
 remove_definitions(-DQT_STRICT_ITERATORS)
 remove_definitions(-DQT_NO_URL_CAST_FROM_STRING)
 remove_definitions(-DQT_NO_CAST_FROM_ASCII)
@@ -15,6 +16,7 @@ remove_definitions(-DQT_NO_CAST_FROM_BYTEARRAY)
 remove_definitions(-DQT_USE_FAST_OPERATOR_PLUS)
 remove_definitions(-DQT_USE_QSTRINGBUILDER)
 
+# Directive to compile Hupnp internal components.
 add_definitions(-DH_BUILD_UPNP_CORE_LIB)
 add_definitions(-DH_BUILD_UPNP_LIGHTING_LIB)
 add_definitions(-DH_BUILD_UPNP_AV_LIB)
