geolocator: Use ecm_install_icons()'s standard naming for icons
Fix CMake warnings.

--- a/dlnaexport/icons/CMakeLists.txt
+++ b/dlnaexport/icons/CMakeLists.txt
@@ -1,3 +1,14 @@
-ecm_install_icons( ${ICON_INSTALL_DIR} )
+#
+# Copyright (c) 2015, Alexander Potashev, <aspotashev@gmail.com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-
+ecm_install_icons(
+    ICONS
+        16-apps-kipi-dlna.png
+        32-apps-kipi-dlna.png
+        48-apps-kipi-dlna.png
+        64-apps-kipi-dlna.png
+    DESTINATION ${ICON_INSTALL_DIR}
+)
