--- a/PORT.KF5/FACTORIZE/rajce/kipiplugin_rajceui.rc
+++ b/PORT.KF5/FACTORIZE/rajce/kipiplugin_rajceui.rc
@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="1" name="kipiplugin_rajceexport" >
+<gui version="1" name="kipiplugin_rajce" >
 
     <MenuBar>
 
