--- a/PORT.KF5/FACTORIZE/imgur/kipiplugin_imgurui.rc
+++ b/PORT.KF5/FACTORIZE/imgur/kipiplugin_imgurui.rc
@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="1" name="kipiplugin_imgurexport" >
+<gui version="1" name="kipiplugin_imgur" >
 
     <MenuBar>
 
